--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "daisyui": "^2.46.1",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-id-swiper": "^4.0.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.1",
     "react-use": "^17.4.0",
     "swiper": "^8.4.5"
