--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
     "react-id-swiper": "^4.0.0",
     "react-modal": "^3.16.1",
