--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.6.1",
     "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-id-swiper": "^4.0.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.1",
+    "react-spring": "^9.6.1",
     "react-use": "^17.4.0",
     "swiper": "^8.4.5"
   },
