--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.6.1",
+    "@tanstack/react-query": "^4.22.0",
     "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
