--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/web": "^9.6.1",
     "@tanstack/react-query": "^4.22.0",
+    "axios": "^1.2.2",
     "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
