--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-spring/web": "^9.6.1",
     "@tanstack/react-query": "^4.22.0",
     "axios": "^1.2.2",
+    "chart.js": "^4.2.0",
     "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
