--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     {
       "src": "404",
       "dest": "/404.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
