--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.6.1",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.22.0",
     "axios": "^1.2.2",
     "chart.js": "^4.2.0",
     "daisyui": "^2.46.1",
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "firebase": "^9.15.0",
-    "firebase-admin": "^11.4.1",
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.4.1",
@@ -25,7 +25,6 @@
     "react-hook-form": "^7.41.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
-    "react-id-swiper": "^4.0.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.6.1",
     "react-spring": "^9.6.1",
