--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,7 @@
       "src": "404",
       "dest": "/404.html"
     }
-  ]
+  ],
+
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
