--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "404",
-      "dest": "/404.html"
-    }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "status": 404, "dest": "/other-404.html" }
   ],
 
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/404.js" }]
 }
