--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/(.*)", "status": 404, "dest": "/other-404.html" }
+    { "src": "/(.*)", "status": 404, "dest": "/404.html" }
   ],
 
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/404.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
